ajout structure .gitignore

--- a/exo/2.1/.gitignore
+++ b/exo/2.1/.gitignore
@@ -5,3 +5,17 @@ git 21
 31
 division
 pythagore4
+ComparerAZero
+Calendrier_jourSemaine
+Calendrier_mois
+Calendrier_estBissextile
+Calendrier_jourDansMois
+PlusGrandNombreDeTrois
+var+-nul
+voyelle
+PlusGrandNombreDeTrois
+Calendrier_estBissextile
+Calendrier_jourDansMois
+Calendrier_jourSemaine
+Calendrier_mois
+ComparerAZero
